test/errors/offsetof_bad_field.luv
# RET: 1
# ERR: {self}:9:27:    print offsetof(Stuff, q)
# ERR: {ssss}                                ^ error: 'q' is not a field of type Stuff.
struct Stuff:
    int x
    int y

def int main():
    print offsetof(Stuff, q)
